# tea-inside-bot-s6

./: .gitignore  CMakeLists.txt  README.md  test.php
include/: config.hpp.example  urlencode.hpp  utils.hpp
include/bot/: bot.hpp
include/lang/en/: start.hpp
src/: main.cpp  urlencode.cpp  utils.cpp
src/bot/: bot.cpp  response_routes.cpp
src/bot/responses/: start.cxx
